# loki-android-wallet

./: .drone.jsonnet  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: monerujo.cpp
app/src/main/java/com/m2049r/xmrwallet/: LoginActivity.java  WalletActivity.java
app/src/main/java/com/m2049r/xmrwallet/fragment/send/: SendAddressWizardFragment.java
app/src/main/java/com/m2049r/xmrwallet/model/: PendingTransaction.java  Wallet.java  WalletManager.java
app/src/main/java/com/m2049r/xmrwallet/util/: AppPreferences.java
app/src/main/java/com/m2049r/xmrwallet/widget/: ExchangeView.java
app/src/main/res/layout/: fragment_send_address.xml
app/src/main/res/values/: help.xml
app/src/main/res/values-ro/: help.xml
app/src/main/res/values-ru/: help.xml
app/src/main/res/values-sr/: help.xml
app/src/main/res/values-ua/: help.xml
app/src/stagenet/res/values/: strings.xml
external-libs/docker/: Dockerfile
gradle/wrapper/: gradle-wrapper.properties
utils/: drone-ci-upload.sh  sign.sh
